--- a/html/index.html
+++ b/html/index.html
@@ -108,25 +108,25 @@
 				<div class="place-wrap mo-padding">
 					<img src="../img/newyork.jpg" alt="" class="w-100">
 					<div class="place-txt">
-						<b>New York</b>
+						<p class="bold">New York</p>
 						<p class="grey">Fri 27 Nov 2016</p>
-						<p>Praesent tincidunt sed tellus ut rutrum sed vitae justo.</p>
+						<p class="content">Praesent tincidunt sed tellus ut rutrum sed vitae justo.</p>
 						<button class="bt-black">Buy Ticket</button>
 					</div>
 				</div>
 				<div class="place-wrap mo-padding">
 					<img src="../img/paris.jpg" alt="" class="w-100">
-					<div class="place-txt"><b>Paris</b>
+					<div class="place-txt"><p class="bold">Paris</p>
 						<p class="grey">Sat 28 Nov 2016</p>
-						<p>Praesent tincidunt sed tellus ut rutrum sed vitae justo.</p>
+						<p class="content">Praesent tincidunt sed tellus ut rutrum sed vitae justo.</p>
 						<button class="bt-black">Buy Ticket</button>
 					</div>
 				</div>
 				<div class="place-wrap mo-padding">
 					<img src="../img/sanfran.jpg" alt="" class="w-100">
-					<div class="place-txt"><b>San Francisco</b>
+					<div class="place-txt"><p class="bold">San Francisco</p>
 						<p class="grey">Sun 29 Nov 2016</p>
-						<p>Praesent tincidunt sed tellus ut rutrum sed vitae justo.</p>
+						<p class="content">Praesent tincidunt sed tellus ut rutrum sed vitae justo.</p>
 						<button class="bt-black">Buy Ticket</button>
 					</div>
 				</div>
